--- a/Project1.csproj
+++ b/Project1.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HeroList.cs" />
     <Compile Include="Hero.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
